multi-cluster-echo-deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: echo
  labels:
    name: echo

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-deployment
  namespace: echo
  labels:
    app: echo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - image: australia-southeast2-docker.pkg.dev/{project-id}/docker-registry/ealen/echo-server
          name: echo-container
          resources:
            requests:
              cpu: "250m"
              memory: "512M"
          ports:
            - containerPort: 80
              name: echo-port
      restartPolicy: Always
